# data-science-udfjc

./: README.md  pyproject.toml
workshops/: Workshop_1.ipynb  Workshop_2.ipynb  Workshop_3.ipynb  Workshop_4.ipynb
workshops/assets/: .~lock.NISPUF17.csv#
