[tool.poetry]
name = "data-science-udfjc"
version = "0.1.0"
description = "In this repository the contents of the workshops and other files for the data science class will be uploaded."
authors = [
    "Daniel Alejandro Chavez Busutos <dachavezb@udistrital.edu.co>"
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
scipy = "^1.14.0"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
